# rust-jwt-parser

./: .env  Cargo.toml  private_key.pem  public_key.pem
examples/: hs256_example.rs  hs265_example.rs  rs256_example.rs  sign_example.rs  verify_example.rs
src/: lib.rs  main.rs
src/algorithms/: hs256.rs  mod.rs  rs256.rs
src/core/: sign.rs  verify.rs
src/utils/: error.rs  mod.rs
