[package]
name = "rust-jwt-parser"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
base64 = "0.21"
dotenv = "0.15.0"
ring = "0.16"
thiserror = "2"
rsa = "0.9.8"
